# bookworm

./: .flake8  .gitignore  .pre-commit-config.yaml  podman-compose.yaml  pyproject.toml  tox.ini
bookworm/basket/: apps.py
bookworm/catalog/: admin.py  apps.py  models.py  validations.py
bookworm/catalog/api/: serializers.py  views.py
bookworm/catalog/migrations/: 0001_initial.py  0002_book_description.py  0003_remove_category_books_book_category.py  0004_alter_category_options_alter_book_cover.py
bookworm/catalog/tests/: factories.py  test_serializer.py  test_view.py
bookworm/order/: apps.py
bookworm/user/: admin.py  apps.py  managers.py  models.py
bookworm/user/api/: serializers.py  views.py
bookworm/user/migrations/: 0001_initial.py
bookworm/user/tests/: factories.py  test_view.py
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: local.py
